syntax = "proto3";
package schema;
import "google/protobuf/empty.proto";
option go_package = "github.com/vadiminshakov/committer/proto";

service Commit {
  rpc Propose(ProposeRequest) returns (Response);
  rpc Precommit(PrecommitRequest) returns (Response);
  rpc Commit(CommitRequest) returns (Response);
  rpc Put(Entry) returns (Response);
  rpc Get(Msg) returns (Value);
  rpc NodeInfo(google.protobuf.Empty) returns (Info);
}

message ProposeRequest {
  string Key = 1;
  bytes Value = 2;
  CommitType CommitType = 3;
  uint64 index = 4;
}

enum CommitType {
  TWO_PHASE_COMMIT = 0;
  THREE_PHASE_COMMIT = 1;
}

enum Type {
  ACK = 0;
  NACK = 1;
}

message Response {
  Type type = 1;
  uint64 index = 2;
}

message Vote {
  string node = 1;
  bool isAccepted = 2;
}

message PrecommitRequest {
  uint64 index = 1;
  repeated Vote votes = 2;
}

message CommitRequest {
  uint64 index = 1;
  bool isRollback = 2;
}

message Entry {
  string key = 1;
  bytes value = 2;
}

message Msg {
  string key = 1;
}

message Value {
  bytes value = 1;
}

message Info {
  uint64 height = 1;
}